--- a/css/layout.css
+++ b/css/layout.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: space-between;
     gap: var(--layout-gap-size);
+    min-height: 100vh;
 }
 
 .header {
@@ -123,6 +124,7 @@
             p {
                 display: block;
                 font-size: 1.2rem;
+                max-width: 290px;
                 color: var(--footer-contact-text-color);
             }
 
@@ -169,7 +171,7 @@
     .copyright {
         color: var(--footer-copyright-text-color);
         background-color: var(--footer-copyright-background-color);
-        padding: var(--footer-copyright-padding-size);
+        padding: var(--footer-copyright-padding-size) 0;
         width: 100%;
         text-align: center;
         font-size: var(--footer-copyright-font-size);
